--- a/GugelCar/src/GUI/AgentNameCapture.form
+++ b/GugelCar/src/GUI/AgentNameCapture.form
@@ -49,7 +49,7 @@
               </grid>
             </constraints>
             <properties>
-              <text value="gugelcar.GugelCar"/>
+              <text value="GugelCar"/>
             </properties>
           </component>
           <component id="fe555" class="javax.swing.JComboBox" binding="mapSelectionBox">
@@ -90,7 +90,7 @@
             </constraints>
             <properties>
               <font size="18" style="1"/>
-              <text value="gugelcar.GugelCar // DBA P3"/>
+              <text value="gugelcar.GugelCar // DBA P2"/>
             </properties>
           </component>
         </children>
