--- a/GugelCar/src/GUI/AgentNameCapture.form
+++ b/GugelCar/src/GUI/AgentNameCapture.form
@@ -90,7 +90,7 @@
             </constraints>
             <properties>
               <font size="18" style="1"/>
-              <text value="gugelcar.GugelCar // DBA P2"/>
+              <text value="GugelCar // DBA P3"/>
             </properties>
           </component>
         </children>
