--- a/GugelCar/src/practica2/GUI/GugelCarView.form
+++ b/GugelCar/src/practica2/GUI/GugelCarView.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.GugelCarView">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="practica2.GUI.GugelCarView">
   <grid id="27dc6" binding="contentPane" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -84,7 +84,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="b5acc" class="GUI.TraceMap" binding="traceMap">
+              <component id="b5acc" class="practica2.GUI.TraceMap" binding="traceMap">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
                     <minimum-size width="500" height="500"/>
